--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "coffee-script": "^1.10.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "morgan": "^1.6.1",
     "request": "^2.61.0"
   }
 }
