Add event feed screen and set up http requests with Volley.

--- a/clients/Android/Grapevine/app/src/main/AndroidManifest.xml
+++ b/clients/Android/Grapevine/app/src/main/AndroidManifest.xml
@@ -29,6 +29,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cs.lmu.grapevine.MainActivity" />
         </activity>
+        <activity
+            android:name=".FeedEvents"
+            android:label="@string/event_feed"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cs.lmu.grapevine.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
