--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "coffee-script": "^1.10.0",
+    "chrono-node": "^1.0.8",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
