--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "An app that creates a calendar from scraping social media.",
   "scripts": {
-    "start": "coffee server/social-media-api/server.coffee"
+    "start": "node_modules/coffee-script/bin/coffee server/social-media-api/server.coffee & node_modules/coffee-script/bin/coffee server/grapevine-api/server.coffee"
   },
   "repository": {
     "type": "git",
