--- a/clients/Android/Grapevine/app/src/main/AndroidManifest.xml
+++ b/clients/Android/Grapevine/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +18,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -31,11 +32,15 @@
         </activity>
         <activity
             android:name=".FeedEvents"
-            android:label="@string/event_feed"
-            android:parentActivityName=".MainActivity" >
+            android:label="@string/event_feed">
+        </activity>
+        <activity
+            android:name=".CalendarView"
+            android:label="@string/calendar_view"
+            android:parentActivityName=".FeedEvents" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cs.lmu.grapevine.MainActivity" />
+                android:value="cs.lmu.grapevine.FeedEvents" />
         </activity>
     </application>
 
