--- a/clients/Android/Grapevine/app/build.gradle
+++ b/clients/Android/Grapevine/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'com.roomorama:caldroid:2.2.0'
     compile project(":volley")
 }
