--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "An app that creates a calendar from scraping social media.",
   "scripts": {
-    "start": "node_modules/coffee-script/bin/coffee server/social-media-api/server.coffee & node_modules/coffee-script/bin/coffee server/grapevine-api/server.coffee"
+    "start": "node_modules/coffee-script/bin/coffee server/social-media-api/server.coffee & node_modules/coffee-script/bin/coffee server/grapevine-api/server.coffee",
+    "test": "node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register test --recursive --slow 4000"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "morgan": "^1.6.1",
     "request": "^2.61.0",
     "should": "^7.1.0",
+    "sinon": "^1.17.1",
     "supertest": "^1.1.0"
   }
 }
