Create environment variable for api url.

--- a/clients/Android/Grapevine/app/build.gradle
+++ b/clients/Android/Grapevine/app/build.gradle
@@ -16,7 +16,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            buildConfigField "String", "API_HOST", "\"http://192.168.1.71:8000/\""
+        }
     }
+
 }
 
 dependencies {
