--- a/clients/iOS/Grapevine/Podfile
+++ b/clients/iOS/Grapevine/Podfile
@@ -2,6 +2,8 @@ platform :ios, '8.0'
 use_frameworks!
 
 target 'Grapevine' do
-    pod 'ObjectMapper', '~> 0.18'
+    pod 'Alamofire', '~> 2.0'
+    pod 'ObjectMapper', '~> 0.17'
+    pod 'AlamofireObjectMapper', '~> 1.0'
     pod 'SwiftyJSON', :git => 'https://github.com/SwiftyJSON/SwiftyJSON.git'
 end
