--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/lmucs/social-feed-calendar#readme",
   "dependencies": {
+    "async":"^1.5.0",
     "body-parser": "^1.13.3",
     "chai": "^3.3.0",
     "chrono-node": "^1.0.8",
