clean ups and additional testing

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "chai": "^3.4.1",
     "coffee-script": "^1.10.0",
     "dotenv-with-overload": "^0.5.1",
     "express": "^4.13.3",
