--- a/clients/Android/Grapevine/app/src/main/AndroidManifest.xml
+++ b/clients/Android/Grapevine/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.Login"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:noHistory="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
