--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "supertest": "^1.1.0"
   },
   "dependencies": {
-    "async":"^1.5.0",
+    "async": "^1.5.0",
     "body-parser": "^1.13.3",
-    "chai": "^3.3.0",
-    "chrono-node": "^1.0.8",
     "chai": "^3.4.1",
+    "chrono-node": "^1.0.8",
     "coffee-script": "^1.10.0",
     "dotenv-with-overload": "^0.5.1",
     "express": "^4.13.3",
     "jwt-simple": "^0.3.1",
+    "lodash": "^3.10.1",
     "morgan": "^1.6.1",
     "pg": "^4.4.2",
     "request": "^2.61.0"
