--- a/clients/Android/Grapevine/app/build.gradle
+++ b/clients/Android/Grapevine/app/build.gradle
@@ -18,11 +18,7 @@ android {
             buildConfigField "String", "API_HOST", "\"https://grapevine.herokuapp.com/api/v1/\""
         }
         debug {
-            //buildConfigField "String", "API_HOST", "\"http://10.0.1.226:8000/api/v1/\""
-            buildConfigField "String", "API_HOST", "\"http://192.168.1.71:8000/api/v1/\""
-            //buildConfigField "String", "API_HOST", "\"http://192.168.43.153:8000/api/v1/\""
-            //buildConfigField "String", "API_HOST", "\"http://10.0.1.58:8000/api/v1/\""
-
+              buildConfigField "String", "API_HOST", "\"https://grapevine.herokuapp.com/api/v1/\""
         }
     }
 
@@ -34,5 +30,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.8.0'
     compile 'com.roomorama:caldroid:2.2.0'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'org.apache.commons:commons-lang3:3.4'
     compile project(":volley")
 }
