--- a/clients/Android/Grapevine/app/src/main/AndroidManifest.xml
+++ b/clients/Android/Grapevine/app/src/main/AndroidManifest.xml
@@ -8,12 +8,13 @@
         android:allowBackup="true"
         android:icon="@drawable/grapevine_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:logo="@drawable/full_logo">
         <activity
             android:name=".activities.Login"
             android:label="@string/app_name"
-            android:noHistory="true">
-
+            android:noHistory="true"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,7 +23,7 @@
         <activity
             android:name=".activities.RegisterUser"
             android:label="@string/title_activity_create_new_account"
-            android:parentActivityName=".activities.Login" >
+            android:parentActivityName=".activities.Login">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.Login" />
@@ -53,7 +54,11 @@
             android:name=".activities.ManageFeeds"
             android:label="@string/title_activity_manage_feeds"
             android:windowSoftInputMode="stateHidden"
+            android:parentActivityName=".activities.EventFeed"
             android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.EventFeed" />
         </activity>
     </application>
 
