Fix syntax errors, add mustache email template for forgotten password email.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^3.10.1",
     "morgan": "^1.6.1",
     "pg": "^4.4.2",
-    "request": "^2.61.0"
+    "request": "^2.61.0",
+    "mu2": "^0.5.20"
   }
 }
